<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EEE7"
    tools:context=".informacion">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="139dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/diccionario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/fuente5"
                android:gravity="center"
                android:text="@string/diccionario"
                android:textColor="#000000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/info1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/fuente5"
                android:gravity="center"
                android:text="@string/definicion_de_grafo"
                android:textColor="#000000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/info2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/fuente5"
                android:gravity="center"
                android:text="@string/eulerianaconexa"
                android:textColor="#000000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/info3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/fuente5"
                android:gravity="center"
                android:text="@string/kruskal"
                android:textColor="#000000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/info4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/fuente5"
                android:gravity="center"
                android:text="@string/dijkstra"
                android:textColor="#000000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/info5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/fuente5"
                android:gravity="center"
                android:text="@string/prim"
                android:textColor="#000000"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/info6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/fuente5"
                android:gravity="center"
                android:text="@string/floyd"
                android:textColor="#000000"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/info7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/fuente5"
                android:gravity="center"
                android:text="@string/divideyvenceras"
                android:textColor="#000000"
                android:textSize="25dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>